This file contains a detailed explanation of the changes between individual
versions of XINS.

$Id$

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 2:

* Logdoc:
  - Added French locale.
  - XML files are now in UTF-8 encoding format.
  - Fixed small error on the English translation of the server side logdoc.

* Libraries
  - Upgraded Log4J library to 1.2.9.
  - Upgraded Common logging to 1.0.4.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 1:

NOTE: This release is based on XINS 1.0.0-beta11.

* XINS/Java Client Framework:
  - Fixed SF.net bug #1063699: Log if call fails on error code. The log
    message 2112 was already defined for this purpose, but it was just not
    used in the code.
  - Fixed SF.net bug #1063672 (XINS call logging: Only first failure is
    logged). Each individual failure is now logged, per target.
  - Fixed bug #1063818: XINSResultParser fails if spaces exist between XML 
    elements.
  - Fixed SF.net bug #1063785: Double spaces in description of a
    XINSCallRequest.
  - Removed deprecated methods from class DataElement:
    . public Iterator getChildren()
    . public Iterator getChildren(String name)
    Changed the tests accordingly.
  - Removed class field SERVICE_DESCRIPTOR_TYPE that was deprecated since XINS
    1.0.0-beta6.
  - Removed log message which previously had the ID 2101, since it did not add
    any information. Previously it was logged right after a call was
    performed, whether it was successful or not. Replaced it by a log message
    that indicates that a successful XINS result was received. This message
    previously had ID 2111, but it was never actually logged. Now it is, but
    on 2101. The ID 2111 is now used for a new log message for unexpected
    exceptions caught while calling the XINS service.