@@ -19,19 +19,19 @@
 	<translation entry="2051">Ignore l'exception <value-of-param name="exceptionClass" /> avec le message <value-of-param name="exceptionMessage" format="quoted" />. Détail: <value-of-param name="description" format="quoted" />.</translation>
 	<translation entry="2052">Attrapé une exception non prévu rejeté par <value-of-param name="throwingClass" />.<value-of-param name="throwingMethod" />.</translation>
 
-	<translation entry="2100">Appelle la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />, le time-out total est de <value-of-param name="totalTimeOut" /> ms, le time-out de la connection est de <value-of-param name="connectionTimeOut" /> ms, le time-out de la socket est de <value-of-param name="socketTimeOut" /> ms.</translation>
-	<translation entry="2101">Reçu un résultat de XINS réussi en appellant la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />.</translation>
-	<translation entry="2102">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: host inconnu.</translation>
-	<translation entry="2103">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Connection refusé.</translation>
-	<translation entry="2104">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Connection time-out.</translation>
-	<translation entry="2105">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Socket time-out.</translation>
-	<translation entry="2106">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Total time-out.</translation>
-	<translation entry="2108">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Reçu HTTP status code inacceptable: <value-of-param name="code" />.</translation>
-	<translation entry="2109">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Erreur E/S non specifique.</translation>
-	<translation entry="2110">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Reçu un résultat XINS invalide. Détail: <value-of-param name="detail" /></translation>
-	<translation entry="2111">Erreur lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Attrapé une exception imprèvu.</translation>
-	<translation entry="2112">Reçu un résultat XINS non réussi (code erreur <value-of-param name="errorCode" />) lors de l'appel de la fonction <value-of-param name="fonction" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />.</translation>
-	<translation entry="2113">La requête de l'appel pour la fonction <value-of-param name="fonction" /> avec les paramètres <value-of-param name="parameters" /> à échoué complement après <value-of-param name="duration" /> ms.</translation>
+	<translation entry="2100">Appelle la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />, le time-out total est de <value-of-param name="totalTimeOut" /> ms, le time-out de la connection est de <value-of-param name="connectionTimeOut" /> ms, le time-out de la socket est de <value-of-param name="socketTimeOut" /> ms.</translation>
+	<translation entry="2101">Reçu un résultat de XINS réussi en appellant la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />.</translation>
+	<translation entry="2102">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: host inconnu.</translation>
+	<translation entry="2103">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Connection refusé.</translation>
+	<translation entry="2104">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Connection time-out.</translation>
+	<translation entry="2105">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Socket time-out.</translation>
+	<translation entry="2106">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Total time-out.</translation>
+	<translation entry="2108">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Reçu HTTP status code inacceptable: <value-of-param name="code" />.</translation>
+	<translation entry="2109">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Erreur E/S non specifique.</translation>
+	<translation entry="2110">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Reçu un résultat XINS invalide. Détail: <value-of-param name="detail" /></translation>
+	<translation entry="2111">Erreur lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" /> en <value-of-param name="duration" /> ms: Attrapé une exception imprèvu.</translation>
+	<translation entry="2112">Reçu un résultat XINS non réussi (code erreur <value-of-param name="errorCode" />) lors de l'appel de la fonction <value-of-param name="function" /> à <value-of-param name="url" /> avec les paramètres <value-of-param name="parameters" />.</translation>
+	<translation entry="2113">La requête de l'appel pour la fonction <value-of-param name="function" /> avec les paramètres <value-of-param name="parameters" /> à échoué complement après <value-of-param name="duration" /> ms.</translation>
 
 	<translation entry="2200">L'XML retourné est invalide. Le type de l'élément racine est <value-of-param name="localName" format="quoted" /> avec le namespace <value-of-param name="namespaceURI" format="quoted" /> au lieu de "result" sans namespace.</translation>
 	<translation entry="2201">Trouvé un paramètre de sortie sans nom ni valeur.</translation>
