@@ -19,7 +19,7 @@
 	<translation entry="3051">Ignoring <value-of-param name="exceptionClass" /> exception with message <value-of-param name="exceptionMessage" format="quoted" />. Detail: <value-of-param name="description" format="quoted" />.</translation>
 	<translation entry="3052">Caught unexpected exception thrown by <value-of-param name="throwingClass" />.<value-of-param name="throwingMethod" />.</translation>
 
-	<translation entry="3100">Changing APIServlet state from <value-of-param name="oldState" /> to <value-of-param name="newState" />.</translation>
+	<translation entry="3100">Changing APIServlet state from <value-of-param name="oldState" />	to <value-of-param name="newState" />.</translation>
 	<translation entry="3101">Changing state failed. The state <value-of-param name="newState" /> cannot follow the state <value-of-param name="oldState" />.</translation>
 
 	<translation entry="3200">Bootstrapping XINS/Java Server Framework <value-of-param name="version" />.</translation>
