@@ -10,6 +10,7 @@ CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 2:
   - Added French locale.
   - XML files are now in UTF-8 encoding format.
   - Fixed small error on the English translation of the server side logdoc.
+  - Translation bundle are now possible on multiple lines.
 
 * Libraries
   - Upgraded Log4J library to 1.2.9.
